# xpde-mines

./: meson.build
src/: cairo_drawings.c  cairo_drawings.h  counters.c  counters.h  global.h  main.c  menubar.c  menubar.h  meson.build  minefield.c  minefield.h  minefield_button.c  minefield_button.h
